# job-search

./: .gitignore  README.md  STATUS.md  package-lock.json  pyproject.toml
config/: company_targets.json  profile.json
data/: company_targets.local.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
src/job_search/: __init__.py  api.py  cli.py  config.py  enums.py  ingest.py  main.py  models.py  repository.py  scoring.py  service.py
src/job_search/adapters/: __init__.py  amazon.py  apple.py  arbeitnow.py  ashby.py  asml.py  base.py  booking.py  eightfold.py  google.py  greenhouse.py  http.py  jane_street.py  lever.py  meta.py  microsoft.py  mock.py  revolut.py  smartrecruiters.py  spotify.py  uber.py  wise.py  workday.py  zalando.py
tests/: test_api.py  test_company_adapters.py  test_google_adapter.py  test_ingestion.py
