[project]
name = "job-search"
version = "0.1.0"
description = "Local-first Europe-focused job search tracker for ML and software roles."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cloudscraper>=1.2.71",
  "fastapi>=0.115.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "uvicorn>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "pytest>=8.3.0,<9.0.0",
]

[project.scripts]
job-search-api = "job_search.main:run"
job-search = "job_search.cli:main"
job-search-serve = "job_search.main:run"
job-search-cli = "job_search.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/job_search"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
